--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
   <head>
     <th:block th:replace="fragments/head :: headFragment"></th:block>
   </head>
-  <body>
+  <body class="container">
     <!-- header -->
     <div>
       <th:block th:replace="fragments/header :: headerFragment('header')"></th:block>
